--- a/GameEngineFrameworkParts.vcxproj.filters
+++ b/GameEngineFrameworkParts.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="GameEventManager.cpp">
       <Filter>Kaynak Dosyalar\EventManager</Filter>
     </ClCompile>
+    <ClCompile Include="KeyboardListener.cpp">
+      <Filter>Kaynak Dosyalar\EventListeners</Filter>
+    </ClCompile>
+    <ClCompile Include="MouseListener.cpp">
+      <Filter>Kaynak Dosyalar\EventListeners</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DamageListener.h">
@@ -52,6 +58,12 @@
     </ClInclude>
     <ClInclude Include="GameEventManager.h">
       <Filter>Üst Bilgi Dosyaları\EventManager</Filter>
+    </ClInclude>
+    <ClInclude Include="MouseListener.h">
+      <Filter>Üst Bilgi Dosyaları\EventListeners</Filter>
+    </ClInclude>
+    <ClInclude Include="KeyboardListener.h">
+      <Filter>Üst Bilgi Dosyaları\EventListeners</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
