--- a/GameEngineFrameworkParts.vcxproj.filters
+++ b/GameEngineFrameworkParts.vcxproj.filters
@@ -28,11 +28,14 @@
     <Filter Include="Kaynak Dosyalar\EventManager">
       <UniqueIdentifier>{fe1cdf5c-76f0-4b3d-8b7d-36c2a039624c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Kaynak Dosyalar\Game">
+      <UniqueIdentifier>{cc4eb16a-603d-4ed1-9b9b-7ed757eb1525}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Üst Bilgi Dosyaları\Game">
+      <UniqueIdentifier>{d5fbea42-0aa3-49ee-8b2e-6be5ee5a732b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GameEngineFrameworkParts.cpp">
-      <Filter>Kaynak Dosyalar</Filter>
-    </ClCompile>
     <ClCompile Include="DamageListener.cpp">
       <Filter>Kaynak Dosyalar\EventListeners</Filter>
     </ClCompile>
@@ -44,6 +47,12 @@
     </ClCompile>
     <ClCompile Include="MouseListener.cpp">
       <Filter>Kaynak Dosyalar\EventListeners</Filter>
+    </ClCompile>
+    <ClCompile Include="Mainframe.cpp">
+      <Filter>Kaynak Dosyalar\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEngineFrameworkParts.cpp">
+      <Filter>Kaynak Dosyalar\Game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +73,12 @@
     </ClInclude>
     <ClInclude Include="KeyboardListener.h">
       <Filter>Üst Bilgi Dosyaları\EventListeners</Filter>
+    </ClInclude>
+    <ClInclude Include="Mainframe.h">
+      <Filter>Üst Bilgi Dosyaları\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="EventTypeEnum.h">
+      <Filter>Üst Bilgi Dosyaları\Enums</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
