--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,10 @@
 *.userosscache
 *.sln.docstates
 
+# Doxygen and Graphviz implementation
+html/
+latex/
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
